# russian_as_second_language_teachers_helper

./: README.md  generator_bot.py  generator_service.py  main.py  main_telebot.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
rsl_telebot/: telebot_base.py  telebot_commands.py  telebot_users.py
src/: constants.py  exercise.py  files.py  sentence_processor.py  sql_base.py  sql_database.py  word.py
tests/: test_exercise.py  test_files.py  test_textprocessor.py
tests/test_text_collection/: fortest.txt
tests/test_text_collection/exercises/: fortest_exercises.txt
text_collection/: Выстрел.txt  Значение биологического разнообразия.txt  Путешествие седьмое.txt  Судьба человека.txt
text_collection/exercises/: Выстрел_answers.txt  Выстрел_exercises.txt  Путешествие седьмое_answers.txt  Путешествие седьмое_exercises.txt
