[tool.poetry]
name = "rsl-exercise-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
pylint = "^3.0.2"
navec = "^0.10.0"
nltk = "^3.9.1"
numpy = "^2.1.3"
pymorphy2= "^0.9.1"
ruwordnet = "^0.0.6"
wiki-ru-wordnet = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"